# VideoEditor

./: CMakeLists.txt  CMakePresets.json  Readme.md  main.cpp  main_streaming.cpp
